--- a/package.json
+++ b/package.json
@@ -23,5 +23,10 @@
     "bootstrap": "^5.3.3",
     "bootswatch": "^5.3.3",
     "fontawesome-free": "^1.0.4"
+  },
+  "devDependencies": {
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.1"
   }
 }
