Redone the assets Refined the coupon and pilot pages Merged the product and accessory page made a universal delete page

--- a/build.conf
+++ b/build.conf
@@ -7,4 +7,5 @@ import * as bootstrap from './bootstrap.js';
 const popoverTriggerList = document.querySelectorAll('[data-bs-toggle=\"popover\"]');
 const popoverList = [...popoverTriggerList].map(popoverTriggerEl => new Popover(popoverTriggerEl));" > site/scripts/dist/script.js
 ncp node_modules/bootstrap/dist/js/bootstrap.bundle.js site/scripts/dist/bootstrap.js
-echo "/* eslint-disable */" | cat - site/scripts/dist/bootstrap.js > temp && mv temp site/scripts/dist/bootstrap.js
+echo "/* eslint-disable */" | cat - site/scripts/dist/bootstrap.js > temp
+mv temp site/scripts/dist/bootstrap.js
