Succesfully finished the engine

--- a/build.conf
+++ b/build.conf
@@ -9,3 +9,4 @@ const popoverList = [...popoverTriggerList].map(popoverTriggerEl => new Popover(
 ncp node_modules/bootstrap/dist/js/bootstrap.bundle.js site/scripts/dist/bootstrap.js
 echo "/* eslint-disable */" | cat - site/scripts/dist/bootstrap.js > temp
 mv temp site/scripts/dist/bootstrap.js
+ncp site/scripts/src/ site/scripts/dist/
