--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "doc": "docs"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "sh build.conf",
-    "dev": "sh build.conf && sass --watch --verbose site/stylesheets/src:site/stylesheets/dist"
+    "build": "sh build.sh",
+    "dev": "sh dev.sh"
   },
   "repository": {
     "type": "git",
@@ -26,6 +25,7 @@
     "bootswatch": "^5.3.3",
     "fontawesome-free": "^1.0.4",
     "ncp": "^2.0.0",
+    "nodemon": "^3.1.3",
     "sass": "^1.77.0"
   },
   "devDependencies": {
